--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,29 +2,43 @@ blinker==1.8.2
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+contourpy==1.2.1
+cycler==0.12.1
 dash==2.17.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
 ExifRead==3.0.0
 Flask==3.0.3
+fonttools==4.53.1
 idna==3.7
+ImageHash==4.3.1
 importlib_metadata==8.2.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
+kiwisolver==1.4.5
 MarkupSafe==2.1.5
+matplotlib==3.9.2
 nest-asyncio==1.6.0
 numpy==2.0.1
+opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.2.2
+pillow==10.4.0
 plotly==5.23.0
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+PyWavelets==1.7.0
 requests==2.32.3
 retrying==1.3.4
+scikit-learn==1.5.1
+scipy==1.14.0
 setuptools==72.2.0
 six==1.16.0
 tenacity==9.0.0
+threadpoolctl==3.5.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
